--- a/demo/index.html
+++ b/demo/index.html
@@ -25,6 +25,7 @@
             is-mobile="{{isMobile}}"
             is-tablet="{{isTablet}}"
             is-desktop="{{isDesktop}}"
+            is-fullscreen="{{isFullscreen}}"
             window-height="{{windowHeight}}"
             window-width="{{windowWidth}}"
             window-aspect="{{windowAspect}}"
@@ -62,6 +63,7 @@
             <tr><td>isMobile</td><td>[[isMobile]]</td></tr>
             <tr><td>isTablet</td><td>[[isTablet]]</td></tr>
             <tr><td>isDesktop</td><td>[[isDesktop]]</td></tr>
+            <tr><td>isFullscreen</td><td>[[isFullscreen]]</td></tr>
             <tr><td>windowHeight</td><td>[[windowHeight]]</td></tr>
             <tr><td>windowWidth</td><td>[[windowWidth]]</td></tr>
             <tr><td>windowAspect</td><td>[[windowAspect]]</td></tr>
