add id to demo instance

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,6 +23,7 @@
         <dom-bind id="ex1">
           <template>
             <screen-env
+              id="env"
               narrow-width="{{narrowWidth}}"
               is-touch="{{isTouch}}"
               is-mobile="{{isMobile}}"
